# Charlotte

./: README.md  pyproject.toml  Схема_Charlotte.odg
charlotte_1/: Charlotte  Charlotte-journal  __init__.py  addprofile.py  addprofileMainWindow.py  addprofileServerTab.py  alerts.py  appEventTab.py  appMainWindow.py  appMenuBar.py  appScrollableLabelButtonFrame.py  button.py  buttonFrame.py  charlotte  db.py  entryLoginTab.py  entryMainWindow.py  entryRegistrationTab.py  globaldata.py  login.py  login.sublime-workspace  main.py  mainMenu.py  main_menu.py  main_window.py  menuBar.py  notebook.py  options.py  profileConnectTab.py  profileMainTab.py  profileMainWindow.py  profileSettingTab.py  profileUserTab.py  regTab.py  registration.py  scrollableLabelButtonFrame.py  serverWindow.py  ssh.py  ssh_parser_module.py  tabs.py  (+5 more)
