[tool.poetry]
name = "charlotte-1"
version = "0.1.0"
description = ""
authors = ["warkisha <warkisha@yandex.ru>"]
readme = "README.md"
packages = [{include = "charlotte_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
